# OpenContext

./: .gitignore  .pre-commit-config.yaml  .yamllint.yaml  AI.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  config-example.yaml  config.yaml  deploy.sh  local_server.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.json
.claude/agents/: plugin-validator.md  test-writer.md
.claude/rules/: code-style.md  infrastructure.md  plugin-development.md  testing.md
.claude/skills/add-plugin/: SKILL.md
.claude/skills/debug-lambda/: SKILL.md
.claude/skills/deploy-aws/: SKILL.md
.claude/skills/fix-coverage/: SKILL.md
.cursor/rules/: project.mdc
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  plugin_request.yml
.github/workflows/: ci.yml  infra.yml  notify-bulletin.yml  release.yml  sync-develop.yml
assets/: brand-guidelines.md
cli/: main.py  utils.py
cli/commands/: architecture.py  authenticate.py  configure.py  cost.py  deploy.py  destroy.py  domain.py  logs.py  plugin.py  security.py  serve.py  status.py  test.py  upgrade.py  validate.py
client/: Makefile  README.md  __init__.py  build.sh  go.mod  main.go  main.py  main_test.go  pyproject.toml
core/: __init__.py  interfaces.py  logging_utils.py  mcp_server.py  plugin_manager.py  validators.py
custom_plugins/: .gitkeep  __init__.py
custom_plugins/integration_test_fake/: __init__.py  plugin.py
custom_plugins/template/: README.md  plugin_template.py
docs/: ARCHITECTURE.md  BUILT_IN_PLUGINS.md  CLI.md  CUSTOM_PLUGINS.md  DEPLOYMENT.md  FAQ.md  GETTING_STARTED.md  LOCAL_TESTING_WITH_CLAUDE.md  PLUGINS.md  QUICKSTART.md  TESTING.md
examples/boston-opendata/: config.yaml
examples/custom-plugin/: config.yaml
plugins/: __init__.py
plugins/arcgis/: __init__.py  config_schema.py  plugin.py  where_validator.py
plugins/ckan/: README.md  __init__.py  config_schema.py  plugin.py  sql_validator.py
plugins/socrata/: __init__.py  config_schema.py  plugin.py  soql_validator.py
scripts/: README.md  deploy.sh  local_server.py  setup-backend.sh  test_streamable_http.sh
server/: __init__.py  http_handler.py  lambda_handler.py  requirements.txt
server/adapters/: __init__.py  aws_lambda.py  gcp_functions.py
terraform/: README.md  api_gateway.tf  main.tf  outputs.tf  variables.tf
terraform/aws/: api_gateway.tf  custom_domain.tf  main.tf  outputs.tf  prod.tfvars  staging.tfvars  variables.tf
terraform/azure/: README.md
terraform/bootstrap/: README.md  main.tf  outputs.tf  variables.tf
terraform/gcp/: API_GATEWAY_PHASE2.md  README.md  backend.tf  main.tf  outputs.tf  variables.tf  versions.tf
terraform/gcp/bootstrap/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
tests/: README.md  __init__.py  conftest.py  test_arcgis_plugin.py  test_aws_lambda.py  test_ckan_plugin.py  test_cli_architecture.py  test_cli_authenticate.py  test_cli_configure.py  test_cli_configure_extended.py  test_cli_cost.py  test_cli_deploy.py  test_cli_destroy.py  test_cli_domain.py  test_cli_logs.py  test_cli_logs_extended.py  test_cli_main_and_utils.py  test_cli_security.py  test_cli_serve.py  test_cli_utils.py  test_cli_validate.py  test_config_validation.py  test_gcp_functions.py  test_http_handler.py  test_lambda_handler.py  test_mcp_server.py  test_mcp_smoke.py  test_plugin_manager.py  test_socrata_plugin.py  test_sql_validator.py
tests/arcgis/: test_ssrf_protection.py
tests/integration/: conftest.py  local_server.py  test_lambda_adapter_pipeline.py  test_mcp_http_pipeline.py  test_plugin_namespace_contract.py  test_terraform_contract.py
tests/integration/cli/: test_cli_configure.py  test_cli_configure_extended.py  test_cli_deploy.py  test_cli_deploy_extended.py  test_cli_destroy.py  test_cli_domain_extended.py  test_cli_test_against_local_server.py  test_cli_validate.py
tests/security/: conftest.py  test_ckan_aggregate_sql_guards.py  test_soql_validator.py  test_sql_validator.py
tests/smoke/: conftest.py
tests/unit/: conftest.py
(+10 files in other folders)
