[project]
name = "opencontext"
version = "1.0.0"
description = "Extensible MCP framework template for civic data platforms"
authors = [
    {name = "Srihari Raman", email = "srihari.raman@boston.gov"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "PyYAML>=6.0",
    "tenacity>=8.0.0",
    "python-json-logger>=2.0.0",
    "sqlparse>=0.4.4",
    "aiohttp>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "ruff>=0.1.0",
    "pip-audit>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/thealphacubicle/OpenContext"
Documentation = "https://github.com/thealphacubicle/OpenContext/blob/main/README.md"
Repository = "https://github.com/thealphacubicle/OpenContext"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["core*", "server*", "plugins*", "custom_plugins*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
# Exclude hard-to-test modules from coverage (formatters, integration-heavy plugin code)
omit = [
    "*/tests/*",
    "*/core/logging_utils.py",
    "*/plugins/ckan/plugin.py",
]
