[project]
name = "opencontext-client"
version = "1.0.0"
description = "Stdio client for OpenContext MCP servers"
authors = [
    {name = "Srihari Raman", email = "srihari.raman@boston.gov"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "anyio>=4.0.0",
]

[project.scripts]
opencontext-client = "client.main:main"

[project.urls]
Homepage = "https://github.com/cityofboston/opencontext"
Documentation = "https://github.com/cityofboston/opencontext/blob/main/README.md"
Repository = "https://github.com/cityofboston/opencontext"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

